@@ -16,6 +16,7 @@ The following list contains all changes to pgAdmin3, as present in cvs.
 </ul>
 <br>
 <ul>
+    <li>2004-01-27 AP        Reworked schema prefixing
     <li>2004-01-25 AP        support of pg_xxx_size if available
     <li>2004-01-21 AP        Improved disconnect handling
     <li>2004-01-21 AP        StatusBar with size handle for frmStatus, dlgFunction and dlgView
